; ModuleID = '/home/carl/AnghaBench/esp-idf/examples/system/sysview_tracing/main/extr_sysview_tracing.c_example_timer_init.c'
source_filename = "/home/carl/AnghaBench/esp-idf/examples/system/sysview_tracing/main/extr_sysview_tracing.c_example_timer_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32, i32, i32, i32, i32, i32 }

@TIMER_BASE_CLK = common dso_local global i64 0, align 8
@TIMER_COUNT_UP = common dso_local global i32 0, align 4
@TIMER_INTR_LEVEL = common dso_local global i32 0, align 4
@TIMER_PAUSE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, i32, i64)* @example_timer_init to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @example_timer_init(i32 %0, i32 %1, i64 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i64, align 8
  %7 = alloca %struct.TYPE_3__, align 4
  %8 = alloca i64, align 8
  store i32 %0, i32* %4, align 4
  store i32 %1, i32* %5, align 4
  store i64 %2, i64* %6, align 8
  %9 = load i64, i64* %6, align 8
  %10 = load i64, i64* @TIMER_BASE_CLK, align 8
  %11 = udiv i64 %10, 1000000
  %12 = mul i64 %9, %11
  %13 = udiv i64 %12, 2
  store i64 %13, i64* %8, align 8
  %14 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %7, i32 0, i32 0
  store i32 1, i32* %14, align 4
  %15 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %7, i32 0, i32 1
  store i32 1, i32* %15, align 4
  %16 = load i32, i32* @TIMER_COUNT_UP, align 4
  %17 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %7, i32 0, i32 5
  store i32 %16, i32* %17, align 4
  %18 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %7, i32 0, i32 2
  store i32 2, i32* %18, align 4
  %19 = load i32, i32* @TIMER_INTR_LEVEL, align 4
  %20 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %7, i32 0, i32 4
  store i32 %19, i32* %20, align 4
  %21 = load i32, i32* @TIMER_PAUSE, align 4
  %22 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %7, i32 0, i32 3
  store i32 %21, i32* %22, align 4
  %23 = load i32, i32* %4, align 4
  %24 = load i32, i32* %5, align 4
  %25 = call i32 @timer_init(i32 %23, i32 %24, %struct.TYPE_3__* %7)
  %26 = load i32, i32* %4, align 4
  %27 = load i32, i32* %5, align 4
  %28 = call i32 @timer_pause(i32 %26, i32 %27)
  %29 = load i32, i32* %4, align 4
  %30 = load i32, i32* %5, align 4
  %31 = call i32 @timer_set_counter_value(i32 %29, i32 %30, i32 0)
  %32 = load i32, i32* %4, align 4
  %33 = load i32, i32* %5, align 4
  %34 = load i64, i64* %8, align 8
  %35 = call i32 @timer_set_alarm_value(i32 %32, i32 %33, i64 %34)
  %36 = load i32, i32* %4, align 4
  %37 = load i32, i32* %5, align 4
  %38 = call i32 @timer_enable_intr(i32 %36, i32 %37)
  ret void
}

declare dso_local i32 @timer_init(i32, i32, %struct.TYPE_3__*) #1

declare dso_local i32 @timer_pause(i32, i32) #1

declare dso_local i32 @timer_set_counter_value(i32, i32, i32) #1

declare dso_local i32 @timer_set_alarm_value(i32, i32, i64) #1

declare dso_local i32 @timer_enable_intr(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
